Backport PRs 42425, 42653, 43080, 43455, 43946

2010-05-19  Richard Guenther  <rguenther@suse.de>

        Backport from mainline:
        2010-04-26  Richard Guenther  <rguenther@suse.de>

	PR lto/43455
	* tree-inline.c (tree_can_inline_p): Also check compatibility
	of return types.

	* gcc.dg/lto/20100423-1_0.c: New testcase.
	* gcc.dg/lto/20100423-1_1.c: Likewise.

        2010-04-23  Richard Guenther  <rguenther@suse.de>

	PR lto/42653
	* tree.c (free_lang_data_in_decl): Do not reset DECL_CONTEXT
	of FUNCTION_DECLs.

	* g++.dg/lto/20100423-1_0.C: New testcase.

        2010-04-26  Richard Guenther  <rguenther@suse.de>

	PR lto/42425
	* tree.c (free_lang_data_in_type): Do not free TYPE_CONTEXT
	if emitting debug information and it is either a function
	or a namespace decl.

	* g++.dg/lto/20100423-2_0.C: New testcase.

        2010-04-26  Richard Guenther  <rguenther@suse.de>

	PR lto/43080
	* gimple.c (gimple_decl_printable_name): Deal gracefully
	with a NULL DECL_NAME.

	* g++.dg/lto/20100423-3_0.C: New testcase.

        2010-04-30  Richard Guenther  <rguenther@suse.de>

	PR lto/43946
	* passes.c (init_optimization_passes): Move pass_ipa_free_lang_data
	first after all lowering passes.

	* gcc.dg/lto/20100430-1_0.c: New testcase.

From-SVN: r159564