gcc/testsuite/gcc.dg/lto/20100423-1_1.c
@@ -1,0 +1,7 @@
+typedef struct{int x;} bar;
+bar foo (void)
+{
+  bar x;
+  return x;
+}
+
